# spark-revenue

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Implementation_Plan.md  Implementation_Plan_To_Execute.md  README.md  alembic.ini  backfill.sh  docker-compose.yml  file:memdb1  mlflow.db  pyproject.toml
.docker/mlruns/: mlflow.db
alembic/: env.py
backend/: config.py  db.py  logging_config.py  main.py
desktop/: main.js  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_backtesting_api.py  test_backtesting_engine.py  test_backtesting_service.py  test_config.py  test_daily_training_flow.py  test_decision_alerts.py  test_decision_api.py  test_decision_fusion.py  test_decision_service.py  test_execution_cli_api.py  test_execution_dispatch.py  test_execution_engine.py  test_execution_guardrails.py  test_execution_overrides.py  test_execution_readiness.py  test_execution_runner.py  test_execution_service.py  test_execution_staleness.py  test_feature_computations.py  test_feature_store.py  test_feature_store_sqlite_upsert.py  test_inference_cli_api.py  test_inference_core_integration.py  test_inference_readiness.py  test_inference_runner.py  test_ingestion.py  test_instruments_api.py  test_instruments_service.py  test_model_registry.py  test_model_registry_cli_api.py  test_operational_cycle.py  test_operational_cycle_cli_api.py  test_options_api.py  test_options_computations.py  test_options_ingestion.py  test_options_service.py  test_orchestration_cli.py  test_orchestration_flows.py  test_orchestration_utils.py  (+22 more)
(+138 files in other folders)
