[project]
name = "spark-revenue"
version = "0.1.0"
description = "AI Trading OS Backend"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "confluent-kafka>=2.3.0",
    "python-json-logger>=2.0.7",
    "redis>=5.0.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "mlflow>=2.12.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "transformers>=4.40.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.10",
    "prefect>=2.16.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "fakeredis>=2.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
